# pdf_summary_gen

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.example
ddr_report/: __init__.py  __main__.py  config.py  filesystem.py  llm.py  matching.py  models.py  pipeline.py  rendering.py  synthesis.py
ddr_report/extraction/: __init__.py  common.py  inspection.py  thermal.py
ddr_report/templates/: report.html.j2
sample_outputs/sample-report__thermal-images__20260416-235830/: report.html  report.json
sample_outputs/sample-report__thermal-images__20260416-235830/artifacts/text/: inspection_page_001.txt  inspection_page_008.txt  inspection_page_012.txt  thermal_page_006.txt  thermal_page_012.txt  thermal_page_020.txt  thermal_page_029.txt  thermal_page_030.txt
sample_outputs/sample-report__thermal-images__20260417-002748/: report.json
sample_outputs/sample-report__thermal-images__20260417-002748/artifacts/text/: inspection_page_005.txt  inspection_page_014.txt  inspection_page_015.txt  inspection_page_019.txt  inspection_page_022.txt  inspection_page_023.txt  thermal_page_013.txt  thermal_page_016.txt  thermal_page_018.txt  thermal_page_019.txt  thermal_page_026.txt
sample_outputs/sample-report__thermal-images__20260417-003941/: report.json
sample_outputs/sample-report__thermal-images__20260417-083344/: report.json
sample_outputs/streamlit_runs/sample-report__thermal-images__20260417-094426/: report.json
scripts/: set_gemini_key.ps1
tests/: test_config.py  test_extraction.py  test_matching.py
(+34 files in other folders)
